Add stats. Improve compilation speed. Improve the IDE